# Smart-Tutor-AI-Clean

./: .gitignore
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/: Chromadb_viewer.py  Context_Retrieval.py  Data_parsing.py  Fine_tune_rag.py  README.md  Tutor_chat.py  app.py  auth.py  chunk_analysis.txt  chunks_output.txt  output.txt  profile_management.py  pyproject.toml  query_log.txt  requirements.txt  requirements_litesh.txt  sidebar.py  user_management.py  utils.py
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/Evaluation_files/: Human Evaluations Smart Tutor AI.csv  Human Evaluations Smart Tutor AI.xlsx  evaluated_context_data.csv  evaluated_context_data_2.csv  evaluated_data.csv  evaluation_1_data.jsonl  evaluation_data.jsonl
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/Modules/Module 10/: BERTopic_DEMO.ipynb  DTM_with_BERTopic.ipynb  Topic_modeling_BertTopic_DEMO.ipynb  Week_8_Code_Demo-3.ipynb
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/Modules/Module 12/: INFO 5731 - Lesson nine - Sentiment analysis-1.ppt  (+3 more)
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/chat_history/: chroma.sqlite3
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/chunks_by_type/: pdf_chunks.txt  unknown_chunks.txt
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/persisted_index/: chroma.sqlite3
Smart-Tutor-AI-AI-Driven-Personalized-Teaching-Support-main/views/: about.py  appointment.py  chat.py  code.py  feedback.py  home.py  profile.py  quiz.py  research.py  resources.py
(+9 files in other folders)
